# kninad.github.io

./: *Backtrace*  .gitignore  .gitmodules  CNAME  CV.html  CV.jemdoc  LICENSE  MENU  Makefile  README  README.html  README.md  TODO.html  TODO.md  _config.yml  art_latexsetup.html  art_latexsetup.md  art_linuxsetup.html  art_linuxsetup.md  art_making_website.html  art_making_website.md  art_vimtmux.html  art_vimtmux.md  articles.html  articles.md  bashjem.sh  categories.html  compile.sh  compile_fresh.sh  config.yaml  cv.html  cv.md  extras.html  extras.jemdoc  genandpushsite.sh  generate.py  github-pandoc.css  gre.html  gre.md  index.html  (+62 more)
_includes/: after-body.html  before-body.html  head.html  my_template.html
blog/: 2015-05-05_linux_setup.html  2015-05-05_linux_setup.md  2018-05-10_making_website.html  2018-05-10_making_website.md  2019-02-04_guiding_principles.html  2019-02-04_guiding_principles.md  2022-09-19_using_jemdoc.html  2022-09-19_using_jemdoc.md  2026-05-08_ubuntu_mods.html  2026-05-08_ubuntu_mods.md  Makefile  index.html  index.md  navbar.html
content/: _index.md  index.md  misc.md  research.md
css/: custom.css  main.bundle.min.1d89c13d2670c02305e7882419c7efd2a9b1ce9b08fce5c4d2574ea0f1884335fbddb319dbda8fc00dc7ebc7b201a6bf6a411e6f6c2c1b8a8260574a922910af.css  main.bundle.min.cf1e0cafedd139c36c8e9aad673e4c573984eaf1bdd0f7e54162332e5b75ed86024383a33367974f1c3f712e9cc09219169df0f983bd0b1f48ee1ae4dbf91406.css  main.css  nomenu.css  pandoc-custom.css  pandoc.css  simple-sidebar.css  worg.css
docs/: 404.html  cv.html  index.html  index.json  index.xml  (+3 more)
(+149 files in other folders)
